--- a/stopwatch.html
+++ b/stopwatch.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!--container-->
     <section class="container">
         <div class="watch">
             <h2 id="watch">00:00:00:00</h2>
