--- a/stopwatch.html
+++ b/stopwatch.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
-    <title>Simple Stopwatch using JavaScript - @code.scientist x @codingtorque</title>
+    <title>Stopwatch/title>
 </head>
 
 <body>
